--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- lang é um atributo da tag HTML -->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+  <title>Proffy</title>
+
+  <link rel="stylesheet" href="style.css">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+    rel="stylesheet">
 
 <body>
 
+  <div id="container">
+    <h1>Proffy</h1> <span>span</span>
+
+    <p>
+      <span>aqui : </span> plataforma de estudos online</p>
+
+    <img src="" alt="Logo">
+    <button> Estudar </button>
+    <button>Dar aulas </button>
+  </div>
 </body>
 
 </html>
