--- a/study.html
+++ b/study.html
@@ -8,6 +8,7 @@
   <title>Proffy</title>
 
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/partials/forms.css">
 
   <link rel="stylesheet" href="/styles/partials/header.css">
   <link rel="stylesheet" href="/styles/partials/page-study.css">
@@ -70,18 +71,12 @@
 
             <select name="weekday" id="weekday">
               <option value="" disabled="" hidden=""> Selecione uma opção</option>
-
               <option value="0"> Domingo</option>
               <option value="1"> Segunda-Feira</option>
-
               <option value="2"> Terça-Feira</option>
-
               <option value="3"> Quarta-Feira</option>
-
               <option value="4"> Quinta-Feira</option>
-
               <option value="5"> Sexta--Feira</option>
-
               <option value="6"> Sábado</option>
 
 
