--- a/src/give-classes.html
+++ b/src/give-classes.html
@@ -17,6 +17,8 @@
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
 
+  <script src="/scripts/addField.js" defer></script>
+
 <body id="page-give-classes">
 
 
@@ -92,38 +94,32 @@
 
         <fieldset>
           <legend>Horários disponíveis
-            <button id="add-time">+ Novo horário</button>
+            <button type="button" id="add-time">+ Novo horário</button>
           </legend>
+
           <div class="schedule-item">
             <div class="select-block">
-              <label for="weekday[]" id="weekday" required> Dia da Semana</label>
-              <select name="weekday" id="weekday">
-                <option value="" disabled="" hidden=""> Selecione uma opção</option>
-                <option value="0"> Domingo</option>
-                <option value="1"> Segunda-Feira</option>
-                <option value="2"> Terça-Feira</option>
-                <option value="3"> Quarta-Feira</option>
-                <option value="4"> Quinta-Feira</option>
-                <option value="5"> Sexta--Feira</option>
-                <option value="6"> Sábado</option>
-
-
-
-
+              <label for="weekday">Dia da semana</label>
+              <select name="weekday[]" required>
+                <option value="">Selecione uma opção</option>
+                <option value="0">Domingo</option>
+                <option value="1">Segunda-Feira</option>
+                <option value="2">Terça-Feira</option>
+                <option value="3">Quarta-Feira</option>
+                <option value="4">Quinta-Feira</option>
+                <option value="5">Sexta-Feira</option>
+                <option value="6">Sábado</option>
               </select>
-
-              <div class="input-block">
-                <label for="time_from"> Das </label>
-                <input type="time" name="time_from[]" required>
-              </div>
-
-              <div class="input-block">
-                <label for="time_to"> Até </label>
-                <input type="time" name="time_to[]" required>
-              </div>
-
-
             </div>
+            <div class="input-block">
+              <label for="time_from">Das</label>
+              <input type="time" name="time_from[]" required>
+            </div>
+            <div class="input-block">
+              <label for="time_to">Até</label>
+              <input type="time" name="time_to[]" required>
+            </div>
+          </div>
         </fieldset>
 
       </form>
